[CHK-2312] onboarding payment method management (#147)
* feat(redirect): add boolean flag indicating whether a payment method is to be used with redirect

* first implementation

* fix compilation problem

* fix methodManagement name on document

* remove unuseful enum

---------
