# api-spec/api.yaml
@@ -412,6 +412,8 @@ components:
           minItems: 1
           items:
             $ref: "#/components/schemas/Range"
+        methodManagement:
+          $ref: "#/components/schemas/PaymentMethodManagementType"
       required:
         - name
         - description
@@ -419,6 +421,7 @@ components:
         - paymentTypeCode
         - ranges
         - clientId
+        - methodManagement
     Range:
       type: object
       description: Payment amount range in eurocents
@@ -459,6 +462,8 @@ components:
           description: Payment method asset name
         status:
           $ref: "#/components/schemas/PaymentMethodStatus"
+        methodManagement:
+          $ref: "#/components/schemas/PaymentMethodManagementType"
         paymentTypeCode:
           type: string
           description: Payment method type code
@@ -506,7 +511,7 @@ components:
           description: The primary creditor institution
           type: string
         transferList:
-          description: Transfert list
+          description: Transfer list
           type: array
           items:
             $ref: "#/components/schemas/TransferListItem"
@@ -626,6 +631,17 @@ components:
         - ENABLED
         - DISABLED
         - INCOMING
+    PaymentMethodManagementType:
+      type: string
+      description: |
+        describes how to manage the payment method authorization flow in wallet and eCommerce domain
+        REDIRECT if it must be managed with a redirect flow, 
+        ONBOARDABLE if it must be managed with NPG and it is possible to save the payment method in the wallet, 
+        NOT_ONBOARDABLE if it must be managed with NPG but the method cannot be saved
+      enum:
+        - REDIRECT
+        - ONBOARDABLE
+        - NOT_ONBOARDABLE
     CreateSessionResponse:
       type: object
       description: Form data needed to create a payment method input form
